[package]
name = "pty_remote"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive", "cargo"] }
tokio = { version = "1.36.0", features = [
    "macros", 
    "rt-multi-thread",
    "net", 
    "rt", 
    "io-util", 
    "io-std",
    "signal",
    "fs"
    ] }
nix = { version = "0.27.1", features = ["ioctl", "process", "signal", "term", "fs"] }
termion = "*"
libc = "0.2.153"
